@@ -1,4 +1,4 @@
-{% extends "djinn_contenttypes/base_detail.html" %}
+{% extends "djinn_contenttypes/base_detail_nd.html" %}
 {% load i18n auth_tags djinn_contenttypes djinn_auth_tags %}
 
 {% block title %}{% title object %}
