@@ -1,3 +1,5 @@
+* changes for bypassing diazo in case of liveblog
+
 1.2.1
 =====
 * performance repair newsviewlet
